Home Controls: Add Device Controls settings
Add a setting that would not require authorization for device controls.

Fixes: 216102581
Test: manual
Change-Id: I1fd98a2fbc1cea44d0b2c3612dd1616a053af394

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13343,6 +13343,10 @@
     <string name="lockscreen_privacy_controls_setting_toggle">Show device controls</string>
     <!-- Device controls summary [CHAR LIMIT=NONE] -->
     <string name="lockscreen_privacy_controls_summary">Access controls when locked</string>
+    <!-- Trivial Device controls toggle name [CHAR LIMIT=60] -->
+    <string name="lockscreen_trivial_controls_setting_toggle">Control from locked device</string>
+    <!-- Trivial Device controls summary [CHAR LIMIT=NONE] -->
+    <string name="lockscreen_trivial_controls_summary">Control external devices without unlocking your phone or tablet if allowed by the device controls app</string>
     <!-- Lockscreen double-line clock summary [CHAR LIMIT=NONE] -->
     <string name="lockscreen_double_line_clock_summary">Show double-line clock when available</string>
     <!-- Lockscreen double-line clock toggle [CHAR LIMIT=60] -->
