Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I6ae1f5b9196148fdff2b5410dc81c0940fa63427

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -3945,7 +3945,7 @@
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Vols permetre que <xliff:g id="SERVICE">%1$s</xliff:g> accedeixi al servei RV?"</string>
     <string name="vr_listener_security_warning_summary" msgid="1888843557687017791">"<xliff:g id="VR_LISTENER_NAME">%1$s</xliff:g> es podrà executar quan utilitzis aplicacions en el mode de realitat virtual."</string>
     <string name="display_vr_pref_title" msgid="4850474436291113569">"Amb el dispositiu en mode RV"</string>
-    <string name="display_vr_pref_low_persistence" msgid="7039841277157739871">"Redueix el desenfocament (recomanat)"</string>
+    <string name="display_vr_pref_low_persistence" msgid="7039841277157739871">"Redueix el desenfocament (opció recomanada)"</string>
     <string name="display_vr_pref_off" msgid="4008841566387432721">"Redueix el parpelleig"</string>
     <string name="picture_in_picture_title" msgid="9001594281840542493">"Pantalla en pantalla"</string>
     <string name="picture_in_picture_empty_text" msgid="9123600661268731579">"Cap de les aplicacions instal·lades no admet pantalla en pantalla"</string>
