--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -2266,7 +2266,7 @@
     <string name="app_name_label" msgid="3809910527680143673">"Sovellus"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Viimeinen käyttöaika"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Käyttöaika"</string>
-    <string name="accessibility_settings" msgid="4713215774904704682">"Esteettömyys"</string>
+    <string name="accessibility_settings" msgid="4713215774904704682">"Saavutettavuus"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Esteettömyysasetukset"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Näyttö, käyttö, audio"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Näköasetukset"</string>
