--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -478,7 +478,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"Törlés"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Érintse meg az érzékelőt"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Helyezze az ujját az érzékelőre, és emelje fel a rezgést követően"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="7534383192863798967">"A rezgésig tartsa ujját az érzékelőn"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="7534383192863798967">"A rezgésig tartsa az ujját az érzékelőn"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Tartsa ujját az ujjlenyomat-érzékelőn"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Emelje fel, majd érintse újra"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Még egyszer"</string>
