Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I66e97246a1e7cccda15c563a0001127629a0b684

--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -3417,7 +3417,7 @@
     <string name="preferred_network_type_title" msgid="812509938714590857">"Тармактын түрү"</string>
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (сунушталат)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS билдирүүлөр"</string>
-    <string name="mms_message_summary" msgid="2855847140141698341">"Мобилдик трафик өчүк кезде жөнөтүү жана кабыл алуу"</string>
+    <string name="mms_message_summary" msgid="2855847140141698341">"MMS билдирүүлөрдү мобилдик Интернет өчүк кезде жөнөтүп, кабыл аласыз"</string>
     <string name="data_during_calls_title" msgid="3940276893360429144">"Чалуу учурундагы трафик"</string>
     <string name="data_during_calls_summary" msgid="2289050189544214759">"Бул SIM карта чалуу учурунда мобилдик Интернетти пайдалануу үчүн гана колдонулат"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Жумуш SIM"</string>
