--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -5538,7 +5538,7 @@
     <string name="smart_forwarding_input_mdn_dialog_title" msgid="7542216086697868415">"Telefon raqamini kiriting"</string>
     <string name="smart_forwarding_missing_mdn_text" msgid="2907314684242542226">"Telefon raqami kiritilmagan."</string>
     <string name="smart_forwarding_missing_alert_dialog_text" msgid="7870419247987316112">"OK"</string>
-    <string name="enable_2g_title" msgid="8184757884636162942">"2G tarmoqqa ruxsat bering"</string>
+    <string name="enable_2g_title" msgid="8184757884636162942">"2G uchun ruxsat"</string>
     <string name="enable_2g_summary" msgid="906487478332145407">"2G mobil internetidan foydalaning. Favqulodda chaqiruvlar uchun 2G doim yoniq turadi."</string>
     <string name="show_clip_access_notification" msgid="7782300987639778542">"Vaqtinchalik xotiraga kirish haqida ogohlantirish"</string>
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"Ilovalar siz nusxa olgan matn, rasmlar yoki boshqa kontentdan foydalanganda xabar chiqarish"</string>
