--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -480,7 +480,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"ဖျက်ရန်"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"အာရုံခံကိရိယာကို ထိပါ"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"သင့်လက်ချောင်းကို အာရုံခံကိရိယာပေါ်သို့ တင်လိုက်ပြီး တုန်ခါမှုကို ခံစားရချိန်တွင် ပြန်ရုပ်လိုက်ပါ"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"တုန်ခါမှုကို ခံစားရချိန်အထိ အာရုံခံကိရိယာပေါ်တွင် သင့်လက်ဗွေထည့်သွင်းပါ"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"တုန်ခါမှုကို ခံစားရချိန်အထိ အာရုံခံကိရိယာပေါ်တွင် သင့်လက်ဗွေအပြားလိုက် တင်ထားပါ"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"လက်ဗွေ အာရုံခံကိရိယာကို တို့ထိ၍ ဖိထားပါ"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"မြှောက်ပါ၊ ထို့နောက် ပြန်ထိပါ"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"နောက်တစ်ကြိမ်"</string>
@@ -495,10 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"လက်ဗွေကို ထည့်ပြီးပါပြီ"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"အက်ပ်များသို့ လက်မှတ်ထိုးဝင်သောအခါကဲ့သို့ သင်ဖြစ်ကြောင်း အတည်ပြုရန်အတွက် (သို့) သင့်ဖုန်းကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို ယခု သုံးနိုင်သည်။"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"နောက်မှလုပ်ရန်"</string>
-    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
-    <skip />
-    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
-    <skip />
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ဖယ်ပြီး ပြန်ထိပါ"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"အာရုံခံကိရိယာပေါ်တွင် သင့်လက်ဗွေ၏ဘေးခြမ်းကို တင်ပြီးဖိထားပါ။ ထို့နောက် အခြားတစ်ဘက်သို့ ပြောင်းပါ"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"လက်ဗွေ သတ်မှတ်မှုကို ကျော်မလား။"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"သင့်လက်ဗွေဖြင့် သင့်ဖုန်းကို သော့ဖွင့်ရန် နည်းလမ်းတစ်ခုအဖြစ် ရွေးချယ်ခဲ့သည်။ အကယ်၍ယခုကျော်သွားလျှင်၊ ၎င်းကိုနောက်နှောင်တွင် သတ်မှတ်ရပါလိမ့်မည်။ သတ်မှတ်ခြင်းသည် မိနစ်အနည်းငယ်သာ ကြာပါသည်။"</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"ဤတက်ဘလက်ပျောက်သွားလျှင် (သို့) ခိုးခံရလျှင် ၎င်းကို ပင်နံပါတ်က ကာကွယ်ပေးသည်"</string>
