--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -495,10 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"ଟିପଚିହ୍ନ ଯୋଗ କରାଯାଇଛି"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"ବର୍ତ୍ତମାନ ଆପଣ ଆପଗୁଡ଼ିକରେ ସାଇନ୍ ଇନ୍ କରିବା ପରି କାର୍ଯ୍ୟ କରିବା ସମୟରେ, ଆପଣଙ୍କ ଫୋନକୁ ଅନଲକ୍ କରିବା କିମ୍ବା ଏହା ଆପଣ ବୋଲି ଯାଞ୍ଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିପାରିବେ"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"ଏହାକୁ ପରେ କରନ୍ତୁ"</string>
-    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
-    <skip />
-    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
-    <skip />
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ଉଠାନ୍ତୁ, ତା\'ପରେ ପୁଣି ସ୍ପର୍ଶ କରନ୍ତୁ"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"ଆପଣଙ୍କ ଟିପଚିହ୍ନର ଗୋଟିଏ ପାର୍ଶ୍ୱକୁ ସେନ୍ସର ଉପରେ ଧରି ରଖି ଅନ୍ୟ ପାର୍ଶ୍ୱକୁ ସ୍ୱିଚ କରନ୍ତୁ"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"ଟିପଚିହ୍ନ ସେଟଅପ୍ ବାଦ୍ ଦେବେ?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"ଫୋନ୍‌କୁ ଅନ୍‌ଲକ୍‌ କରିବା ପାଇଁ ନିଜ ଟିପଚିହ୍ନକୁ ଗୋଟିଏ ମାର୍ଗ ଭାବେ ଆପଣ ବାଛିଛନ୍ତି। ଯଦି ଆପଣ ଏବେ ବାଦ୍ ଦେବେ, ତେବେ ଏହାକୁ ପରେ ସେଟ୍‌ଅପ୍ କରିବାକୁ ପଡ଼ିବ। ସେଟ୍‌ଅପ୍‌ରେ ପ୍ରାୟ କେବଳ ଗୋଟିଏ ମିନିଟ୍‌ ସମୟ ଲାଗିବ।"</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"ଯଦି ଟାବଲେଟଟି ହଜିଯାଏ କିମ୍ବା ଚୋରି ହୋଇଯାଏ, ତେବେ ଏକ PIN ଏହାକୁ ସୁରକ୍ଷିତ ରଖେ"</string>
@@ -5204,7 +5202,7 @@
     <string name="not_allowed" msgid="5756935665192962915">"ଆପଣଙ୍କର SIM କାର୍ଡ ଏହି ନେଟ୍‌ୱର୍କ‌ରେ ସଂଯୁକ୍ତ ହେବା ପାଇଁ ଅନୁମତି ଦିଏ ନାହିଁ।"</string>
     <string name="connect_later" msgid="2330538069949281352">"ବର୍ତ୍ତମାନ ଏହି ନେଟ୍‌ୱର୍କ‌ରେ ସଂଯୋଗ କରାଯାଇପାରିବ ନାହିଁ। ପରେ ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ।"</string>
     <string name="registration_done" msgid="1750434215698850123">"ଏହି ନେଟ୍‌ୱର୍କରେ ପଞ୍ଜିକୃତ କରାଯାଇଛି।"</string>
-    <string name="select_automatically" msgid="2419752566747259155">"ସ୍ଵଚାଳିତ ଭାବେ ନେଟ୍‌ୱର୍କ ଚୟନ କରନ୍ତୁ"</string>
+    <string name="select_automatically" msgid="2419752566747259155">"ସ୍ଵଚାଳିତ ଭାବେ ନେଟୱାର୍କ ଚୟନ କରନ୍ତୁ"</string>
     <string name="carrier_settings_title" msgid="6959295328730560529">"ବାହକ ସେଟିଂସ୍"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"ଡାଟା ସେବା ସେଟ୍‌ଅପ୍ କରନ୍ତୁ"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"ମୋବାଇଲ୍ ଡାଟା"</string>
