--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -488,7 +488,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Хурууныхаа хээг бүрэн гаргахын тулд хуруугаа ахин дахин хөндийрүүлж хүргэнэ үү"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Хурууны хээний дүрс тэмдэг хөдлөх бүрд удаан дарна уу. Энэ нь таны хурууны хээний илүү их зургийг авахад тусална."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Хурууныхаа үзүүрийг мэдрэгч дээр байрлуулна уу"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Эцэст нь хурууныхаа үзүүрийг ашиглана уу"</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Эцэст нь хурууныхаа өндөгний захын хээг ашиглана уу"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Хурууныхаа хээний хажуу талыг мэдрэгч дээр удаан байрлуулж, дараа нь нөгөө тал руу сэлгэнэ үү"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Энэ нь таны хурууны хээний илүү их зургийг авахад тусална"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Хурууны хээ бүртгүүлэх явц <xliff:g id="PERCENTAGE">%d</xliff:g> хувь"</string>
