--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -495,10 +495,8 @@
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Izigxivizo zeminwe zingeziwe"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"Manje ungasebenzisa isigxivizo sakho seminwe ukuze uvule ifoni yakho noma uqinisekise ukuthi unguwe, njengalapho ungena khona ngemvume kuma-app"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Yenza kamuva"</string>
-    <!-- no translation found for security_settings_udfps_tip_fingerprint_help (7580784640741217494) -->
-    <skip />
-    <!-- no translation found for security_settings_udfps_side_fingerprint_help (2567232481013195191) -->
-    <skip />
+    <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Phakamisa, bese uthinte futhi"</string>
+    <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Beka uhlangothi lwesigxivizo sakho somunwe kunzwa uphinde ubambe, bese ushintshela kolunye uhlangothi"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"Yeqa ukusethwa kwezigxivizo zeminwe?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"Ukhethe ukusebenzisa izigxivizo zeminwe zakho njengendlela eyodwa yokuvula ifoni yakho. Uma weqa manje, kuzomele usethe lokhu ngemuva kwesikhathi. Ukusetha kuthatha iminithi noma isikhathi esingalapho."</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"Iphinikhodi ivikela ithebulethi uma ilahlekile noma intshontshiwe"</string>
